--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </footer>
     <script type="text/javascript" src="https://unpkg.com/snarkdown@1.0.2/dist/snarkdown.umd.js"></script>
-    <script type="text/javascript" src="js/idb.js"></script>
+    <!-- <script type="text/javascript" src="js/idb.js"></script> -->
     <script src="js/materialize.min.js"></script>
     <script src="js/nav.js"></script>
     <script src="js/show.js"></script>
